// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`images in figures render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        <h1
          class=""
        />
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        

        <figure
          class="ltx_figure"
          id="S0.F1"
        >
          <img
            alt=""
            class="ltx_graphics"
            height="301"
            id="S0.F1.g1"
            src="fig.png"
            width="284"
          />
          

          <figcaption
            class="ltx_caption"
          >
            <span
              class="ltx_tag ltx_tag_figure"
            >
              Figure 1: 
            </span>
            Fig.
          </figcaption>
          

        </figure>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            See fig 
            <a
              class="ltx_ref"
              href="#S0.F1"
              title="Figure 1"
            >
              <span
                class="ltx_text ltx_ref_tag"
              >
                1
              </span>
            </a>
            .
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p2"
        >
          

          <p
            class="ltx_p"
          >
            Ref which doesn’t exist 
            <span
              class="ltx_ref ltx_missing_label ltx_ref_self"
            >
              LABEL:fig:notexist
            </span>
            .
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`multiple images in figures render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        <h1
          class=""
        />
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        

        <figure
          class="ltx_figure"
          id="S0.F1"
        >
          

          <table
            style="width:100%;"
          >
            

            <tbody>
              <tr>
                

                <td
                  class="ltx_subgraphics"
                >
                  <img
                    alt=""
                    class="ltx_graphics"
                    height="301"
                    id="S0.F1.g1"
                    src="fig.png"
                    width="284"
                  />
                </td>
                

                <td
                  class="ltx_subgraphics"
                >
                  <img
                    alt=""
                    class="ltx_graphics"
                    id="S0.F1.g2"
                    src="fig2.png"
                  />
                </td>
                

              </tr>
              

            </tbody>
          </table>
          

          <figcaption
            class="ltx_caption"
          >
            <span
              class="ltx_tag ltx_tag_figure"
            >
              Figure 1: 
            </span>
            Fig.
          </figcaption>
          

        </figure>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            See fig 
            <a
              class="ltx_ref"
              href="#S0.F1"
              title="Figure 1"
            >
              <span
                class="ltx_text ltx_ref_tag"
              >
                1
              </span>
            </a>
            .
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`plain images render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        <h1
          class=""
        />
        <div
          class="engrafo-metadata"
        >
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <img
            alt=""
            class="ltx_graphics"
            height="318"
            id="p1.g1"
            src="fig.png"
            width="300"
          />
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
